<resources>
    <string name="app_name">买买买</string>
    <string name="start">打开</string>
    <string name="stop">关闭</string>
    <string name="home">首页</string>
    <string name="sort">分类</string>
    <string name="hot">热卖</string>
    <string name="sales">特卖</string>
    <string name="person">我</string>
    <string name="secoo">SECOO</string>
    <string name="shaomiao">扫一扫</string>
    <string name="shezhi">设置</string>
    <string-array name="kinds">
        <item>女装</item>
        <item>男装</item>
        <item>鞋品</item>
        <item>美妆</item>
        <item>饰品</item>
        <item>居家</item>
        <item>儿童</item>
        <item>内衣</item>
        <item>数码家电</item>
        <item>箱包</item>
        <item>家纺家装</item>
        <item>文体运动</item>
        <item>中老年</item>
    </string-array>
    <string-array name="navigations">
        <item>女生精选</item>
        <item>男生精选</item>
        <item>优惠卷</item>
        <item>9.9包邮</item>
        <item>19.9包邮</item>
        <item>29.9包邮</item>
        <item>今日上新</item>
    </string-array>

</resources>
